--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 mysqlclient==1.4.1
 retrying==1.3.3
-git+https://github.com/aleasoluciones/infcommon3.git#egg=infcommon
+-e git+https://github.com/aleasoluciones/infcommon3.git#egg=infcommon
