--- a/dev/infmysql_devdocker/docker-compose.yml
+++ b/dev/infmysql_devdocker/docker-compose.yml
@@ -1,12 +1,13 @@
-db:
-  image: mysql:5
-  ports:
-   - "${MYSQL_PORT}:3306"
-  environment:
-   - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
-   - MYSQL_DATABASE=${MYSQL_DB}
-   - MYSQL_USER=${MYSQL_USER}
-   - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-  volumes:
-   - ./local_mysql_configuration:/docker-entrypoint-initdb.d:ro
-   - /etc/localtime:/etc/localtime:ro
+services:
+  db:
+    image: mysql:5
+    ports:
+     - "${MYSQL_PORT}:3306"
+    environment:
+     - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
+     - MYSQL_DATABASE=${MYSQL_DB}
+     - MYSQL_USER=${MYSQL_USER}
+     - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+    volumes:
+     - ./local_mysql_configuration:/docker-entrypoint-initdb.d:ro
+     - /etc/localtime:/etc/localtime:ro
